fix timeline css to be better on smaller res

--- a/src/styles/Timeline.css
+++ b/src/styles/Timeline.css
@@ -9,6 +9,7 @@
   min-height: 100vh;
   position: relative;
   padding: 20px 0;
+  padding-top: 5%;
   padding-bottom: 5%;
   width: 80%;
   margin: 0 auto;
@@ -61,7 +62,8 @@
 .timeline-item {
   position: relative;
   width: 100%;
-  margin-top: 30px;
+  margin-top: 45px;
+  margin-bottom: 45px;
   /* padding-top aligns text and icon */
   padding-top: 15px;
   box-sizing: border-box;
